--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,5 +17,6 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  }
+  },
+  "paths": { "@angular/*": ["../node_modules/@angular/*"] }
 }
