--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "2.4.9",
     "@angular/router": "3.4.9",
     "@angular/upgrade": "2.4.9",
+    "angular-tag-cloud-module": "^1.4.0",
     "chart.js": "2.5.0",
     "core-js": "2.4.1",
     "moment": "^2.17.1",
@@ -51,7 +52,6 @@
     "karma-coverage-istanbul-reporter": "0.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "ngx-dropzone-wrapper": "^4.0.3",
     "protractor": "5.1.1",
     "ts-node": "2.1.0",
     "tslint": "4.5.1",
